objects/MMPJ_Ext_Vign_Volume_en_BF_mis_en_stock__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - Used for Cognac</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_Annee_de_recolte__c</fullName>
        <label>Année de récolte</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobAccount__c</fullName>
        <label>BlobAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobContainer__c</fullName>
        <label>BlobContainer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobFile__c</fullName>
        <label>BlobFile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Cle_Spirit_1__c</fullName>
        <label>Clé Spirit 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Cru__c</fullName>
        <label>Cru</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>Bies</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>FB</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Document__c</fullName>
        <label>Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lien_vers_document__c</fullName>
        <formula>&quot;https://www.mmpjetmoi.fr/attachment/file/&quot;&amp;Id&amp;&quot;/&quot; &amp; MMPJ_Ext_Vign_Livreur__r.Id &amp; &quot;?volume-de-bf-mis-en-stock&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien vers document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Livreur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Livreur</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MMPJ_Ext_Vign_Societe__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Viticulteur, Vigneron</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Volumes en BF mis en stock</relationshipLabel>
        <relationshipName>Volume_BP_mis_en_stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Volume_BF_mis_en_stock__c</fullName>
        <label>Volume de BF mis en stock</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Volume en BF mis en stock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Livreur__c</columns>
        <columns>MMPJ_Ext_Vign_Cru__c</columns>
        <columns>MMPJ_Ext_Vign_Annee_de_recolte__c</columns>
        <columns>MMPJ_Ext_Vign_Volume_BF_mis_en_stock__c</columns>
        <columns>MMPJ_Ext_Vign_Document__c</columns>
        <columns>MMPJ_Ext_Vign_Cle_Spirit_1__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>fr</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Numero</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volumes en BF mis en stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>